<resources>
    <string name="app_name">ProjectApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">Welcome,</string>
    <string name="two">To sign-in please create account</string>
    <string name="hint1">Enter Name</string>
    <string name="email">Enter Email</string>
    <string name="hint2">Enter Phone Number</string>
    <string name="hint3">Enter Password</string>
    <string name="hint4">Re-Enter Password</string>
    <string name="signup">SIGNUP</string>
    <string name="hint5">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="three">Find your account</string>
    <string name="hint6">Enter Email to Continue</string>
    <string name="go">GO</string>
    <string name="check">CHECK</string>
    <string name="hint7">username@example.com</string>
    <string name="forgotlink">Forgot Password?</string>
    <string name="CreateNew">Create New Account</string>
    <string name="logout">LOGOUT</string>
    <string name="content">image</string>
    <string name="hint8">Enter/Paste news URL here</string>
    <string name="source">SOURCE</string>
    <string name="title">TITLE</string>


</resources>
