<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ProgressBar
                android:id="@+id/loader"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center" />

            <ImageView
                android:id="@+id/imgCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"
                android:contentDescription="@string/content" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/source"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/itemcardmenu"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/content"
                android:src="@drawable/ic_cardmenu_foreground" />


        </FrameLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>